Remove fixed height on reset password modal
It was adding a scrollbar when not needed

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1883,7 +1883,7 @@ md-content.md-default-theme, md-content {
 */
 .modal_recovery {
   width: 400px;
-  height: 376px;
+//  height: 376px;
 
   .modal_message {
     margin-bottom: 5px;
